@@ -1,3 +1,5 @@
+* Agent Console: fix broken POST variable parsing when scheduling a call. Fixes
+  Elastix bux #1083. 
 * Agent Console: allow scrolling on right panel. Fixes Elastix bug #1082.
 * Dialer (ECCP): Do not dial to *8888 anymore for agent login. Instead, dial
   channel directly into the AgentLogin application. This frees the dialer from
